# desktop-ysws

./: .gitignore  Cargo.toml  flake.nix
examples/rust-egui/: .gitignore  Cargo.toml  README.md
examples/rust-egui/src/: app.rs  main.rs
examples/rust-egui/src/app/: todos.rs
